feat: comprehensive rewrite of System Design + cross-stack troubleshooting
Rewrite System Design from seedling (181 lines) to evergreen (~950 lines):
interview framework, building blocks, architectural patterns, and 8 classic
system walkthroughs (URL Shortener, News Feed, Chat, Rate Limiter,
Notification, File Storage, Web Crawler, Key-Value Store).

Add production troubleshooting sections across backend stacks so the same
problems (connection pool, N+1, memory leak, circuit breaker, graceful
shutdown, migrations, tracing) can be compared side-by-side:

- Spring Boot: HikariCP, JPA/Hibernate, @Transactional gotchas, Resilience4j
- Node.js: knex/Prisma pool, event loop blocking, opossum, LRU cache
- Python Backend (new): Django/FastAPI, select_related, Celery, Gunicorn
- Go Backend (new): database/sql pool, goroutine leak, pprof, singleflight

Add Python and Go MOCs and reference them from the main index.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>