@@ -1,7 +1,7 @@
 ---
 title: "Spring Boot"
 created: 2026-04-01
-updated: 2026-04-01
+updated: 2026-04-10
 type: concept
 status: seedling
 tags:
@@ -259,6 +259,355 @@ class AppointmentServiceIntegrationTest {
 - **`@DataJpaTest`:** só repository layer
 - **Testcontainers:** bancos reais em Docker
 
+## Troubleshooting em produção
+
+Problemas recorrentes em aplicações Spring Boot — o tipo de pergunta que aparece em entrevistas como "you've seen this in production, how did you debug it?"
+
+### Connection pool exausto (HikariCP)
+
+**Sintoma:** requests travam, logs mostram `HikariPool - Connection is not available, request timed out after 30000ms`.
+
+**Causas comuns:**
+- Pool pequeno demais para a carga
+- Queries lentas segurando conexões
+- Transação não fechada (leak)
+- `@Transactional` em método que faz chamada HTTP externa (segura conexão enquanto espera response)
+
+**Diagnóstico:**
+
+```java
+// application.yml — habilitar métricas do HikariCP
+spring:
+  datasource:
+    hikari:
+      maximum-pool-size: 10        # default é 10
+      minimum-idle: 5
+      connection-timeout: 30000     # ms para esperar conexão do pool
+      leak-detection-threshold: 60000  # alerta se conexão não devolvida em 60s
+      metrics-tracker-factory: io.micrometer.core.instrument.binder.db.HikariCPMetricsTrackerFactory
+```
+
+**Métricas para monitorar (Micrometer/Prometheus):**
+- `hikaricp_connections_active` — quantas em uso
+- `hikaricp_connections_pending` — quantas esperando (se > 0 por muito tempo, pool exausto)
+- `hikaricp_connections_timeout_total` — timeouts acumulados
+
+**Soluções:**
+1. Habilitar `leak-detection-threshold` para encontrar onde a conexão está vazando
+2. Não fazer I/O externo dentro de `@Transactional` — separar a chamada HTTP da transação
+3. Ajustar pool size: `connections = (cores * 2) + 1` como baseline (HikariCP wiki)
+4. Revisar queries lentas com `EXPLAIN ANALYZE`
+
+### N+1 queries (JPA/Hibernate)
+
+**Sintoma:** endpoint que deveria fazer 1-2 queries faz 50+. Latência degrada proporcionalmente ao número de registros.
+
+**Como detectar:**
+
+```java
+// application.yml — ver queries no log
+spring:
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        generate_statistics: true  # mostra count de queries por sessão
+
+// Ou usar Hibernate Statistics programaticamente
+logging:
+  level:
+    org.hibernate.stat: DEBUG
+```
+
+**Cenário típico:**
+
+```java
+// RUIM — gera N+1 queries
+List<Doctor> doctors = doctorRepo.findAll();  // 1 query
+doctors.forEach(d -> d.getAppointments().size());  // N queries (1 por doctor)
+```
+
+**Soluções:**
+
+```java
+// 1. JOIN FETCH (JPQL)
+@Query("SELECT d FROM Doctor d JOIN FETCH d.appointments WHERE d.active = true")
+List<Doctor> findActiveWithAppointments();
+
+// 2. @EntityGraph (declarativo)
+@EntityGraph(attributePaths = {"appointments", "specialty"})
+List<Doctor> findByActiveTrue();
+
+// 3. @BatchSize (lazy loading em lotes, menos queries)
+@Entity
+public class Doctor {
+    @OneToMany(mappedBy = "doctor")
+    @BatchSize(size = 20)  // carrega 20 relações por vez, não 1
+    private List<Appointment> appointments;
+}
+
+// 4. DTO Projection (melhor performance — sem entidade managed)
+@Query("SELECT new com.app.dto.DoctorSummary(d.name, COUNT(a)) " +
+       "FROM Doctor d LEFT JOIN d.appointments a GROUP BY d.name")
+List<DoctorSummary> findDoctorSummaries();
+```
+
+**Regra:** sempre verificar o Hibernate statistics ou query log antes de ir para produção. N+1 em 10 registros no dev pode significar 10.000 queries em produção.
+
+### LazyInitializationException
+
+**Sintoma:** `org.hibernate.LazyInitializationException: could not initialize proxy - no Session`
+
+**Causa:** acessar uma relação `@*ToMany` (lazy por default) fora do escopo de uma transação/sessão Hibernate.
+
+```java
+// RUIM — sessão já fechou quando o controller tenta serializar
+@GetMapping("/doctors/{id}")
+public Doctor getDoctor(@PathVariable Long id) {
+    Doctor doctor = doctorRepo.findById(id).orElseThrow();
+    // se Doctor tem List<Appointment> lazy, Jackson tenta serializar → BOOM
+    return doctor;
+}
+```
+
+**Soluções (em ordem de preferência):**
+
+1. **DTO Projection** — retorna exatamente o que precisa, sem entidade lazy
+
+```java
+@GetMapping("/doctors/{id}")
+public DoctorResponse getDoctor(@PathVariable Long id) {
+    return doctorService.findById(id);  // retorna DTO, não entidade
+}
+```
+
+2. **`@EntityGraph`** — carrega eager para essa query específica
+
+```java
+@EntityGraph(attributePaths = "appointments")
+Optional<Doctor> findById(Long id);
+```
+
+3. **`JOIN FETCH`** — na JPQL
+
+**Anti-pattern a evitar:** `spring.jpa.open-in-view=true` (OSIV) — mantém sessão aberta no controller. "Resolve" o erro mas causa problemas piores: connection pool exausto, queries inesperadas no view layer. **Desabilite em produção.**
+
+```yaml
+spring:
+  jpa:
+    open-in-view: false  # SEMPRE false em produção
+```
+
+### @Transactional: problemas sutis
+
+**Problema 1 — `@Transactional` em método privado:**
+
+```java
+@Service
+public class PaymentService {
+    @Transactional  // NÃO FUNCIONA — Spring usa proxy, só intercepta public
+    private void processPayment(Payment p) { ... }
+}
+```
+
+Spring Boot usa proxies (CGLIB por default). O proxy só intercepta chamadas externas ao bean. Método privado ou chamada interna (self-invocation) bypassa o proxy.
+
+**Problema 2 — self-invocation:**
+
+```java
+@Service
+public class OrderService {
+    public void createOrder(OrderRequest req) {
+        // ... lógica
+        sendConfirmation(req);  // chamada interna → @Transactional IGNORADO
+    }
+
+    @Transactional
+    public void sendConfirmation(OrderRequest req) { ... }
+}
+```
+
+**Solução:** extrair para outro bean, ou usar `ApplicationEventPublisher`:
+
+```java
+@Service
+public class OrderService {
+    private final ApplicationEventPublisher events;
+
+    public void createOrder(OrderRequest req) {
+        // ... lógica
+        events.publishEvent(new OrderCreatedEvent(req));
+    }
+}
+
+@Component
+@TransactionalEventListener
+public class OrderEventHandler {
+    @Transactional
+    public void onOrderCreated(OrderCreatedEvent event) { ... }
+}
+```
+
+**Problema 3 — exceção checked não faz rollback:**
+
+```java
+@Transactional  // por default, só faz rollback em unchecked (RuntimeException)
+public void transfer(Account from, Account to, BigDecimal amount) throws InsufficientFundsException {
+    // InsufficientFundsException é checked → NÃO faz rollback!
+}
+
+// Solução: declarar explicitamente
+@Transactional(rollbackFor = InsufficientFundsException.class)
+```
+
+### Memory leak e GC tuning
+
+**Diagnóstico:**
+
+```bash
+# Heap dump quando OOM
+java -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp/heapdump.hprof -jar app.jar
+
+# Analisar com Eclipse MAT ou VisualVM
+# Buscar: objetos que crescem sem parar, collections gigantes, caches sem limite
+```
+
+**Causas comuns em Spring Boot:**
+- Cache sem eviction (ex.: `@Cacheable` sem TTL → memória cresce infinitamente)
+- `static` collections que acumulam dados
+- Event listeners que acumulam referências
+- ThreadLocal não limpo (especialmente em servidores com thread pool)
+
+**GC tuning básico:**
+
+```bash
+# G1GC (default Java 17+) — geralmente não precisa tuning
+java -Xms512m -Xmx2g -XX:+UseG1GC -jar app.jar
+
+# ZGC (Java 21+) — low-latency, pausas < 1ms
+java -Xms512m -Xmx2g -XX:+UseZGC -jar app.jar
+
+# Métricas: monitorar via Actuator/Micrometer
+management.metrics.enable.jvm=true
+```
+
+### API timeout e cascading failures
+
+**Problema:** serviço A chama serviço B que está lento → threads de A ficam presas → A também fica lento → cascata.
+
+**Solução com Resilience4j:**
+
+```java
+// build.gradle
+implementation 'io.github.resilience4j:resilience4j-spring-boot3'
+
+// application.yml
+resilience4j:
+  circuitbreaker:
+    instances:
+      notificationService:
+        sliding-window-size: 10
+        failure-rate-threshold: 50    # abre após 50% de falhas
+        wait-duration-in-open-state: 30s
+        permitted-number-of-calls-in-half-open-state: 3
+  timelimiter:
+    instances:
+      notificationService:
+        timeout-duration: 2s          # timeout de 2s
+  retry:
+    instances:
+      notificationService:
+        max-attempts: 3
+        wait-duration: 500ms
+
+// No service
+@CircuitBreaker(name = "notificationService", fallbackMethod = "fallbackNotify")
+@TimeLimiter(name = "notificationService")
+@Retry(name = "notificationService")
+public CompletableFuture<String> notify(NotificationRequest req) {
+    return CompletableFuture.supplyAsync(() -> notificationClient.send(req));
+}
+
+public CompletableFuture<String> fallbackNotify(NotificationRequest req, Throwable t) {
+    log.warn("Notification failed, queuing for retry: {}", t.getMessage());
+    retryQueue.add(req);  // enfileirar para retry assíncrono
+    return CompletableFuture.completedFuture("queued");
+}
+```
+
+### Graceful shutdown
+
+**Problema:** deploy mata o processo enquanto requests estão em andamento → erros 502 para o usuário.
+
+```yaml
+# application.yml
+server:
+  shutdown: graceful  # espera requests em andamento terminarem
+
+spring:
+  lifecycle:
+    timeout-per-shutdown-phase: 30s  # tempo máximo de espera
+```
+
+```java
+// Para limpeza customizada
+@Component
+public class CleanupHandler {
+    @PreDestroy
+    public void cleanup() {
+        // fechar conexões, flush de buffers, etc.
+        log.info("Shutting down gracefully...");
+    }
+}
+```
+
+### Database migrations seguras (Flyway)
+
+**Problema:** `ALTER TABLE ADD COLUMN NOT NULL` em tabela grande trava o banco (lock de escrita).
+
+**Migração segura em produção (expand-and-contract):**
+
+```sql
+-- V10__add_email_safe.sql
+-- Step 1: adiciona coluna nullable (sem lock)
+ALTER TABLE patients ADD COLUMN email VARCHAR(255);
+
+-- V11__backfill_email.sql
+-- Step 2: popula em batches (sem lock longo)
+UPDATE patients SET email = 'unknown@legacy.com' WHERE email IS NULL;
+
+-- V12__make_email_not_null.sql
+-- Step 3: após deploy que já escreve email, adiciona constraint
+ALTER TABLE patients ALTER COLUMN email SET NOT NULL;
+```
+
+**Regras:**
+- Nunca `DROP COLUMN` na mesma release que remove o código que usa. Primeiro deploy sem o código, depois migra.
+- Nunca rename de coluna em uma step — cria nova, copia, valida, depois remove antiga.
+- Sempre testar migração no staging com volume real de dados.
+
+### Distributed tracing
+
+**Problema:** request passa por 5 microserviços, está lenta. Qual serviço é o gargalo?
+
+```java
+// build.gradle — Spring Boot 3 com Micrometer Tracing
+implementation 'io.micrometer:micrometer-tracing-bridge-otel'
+implementation 'io.opentelemetry:opentelemetry-exporter-otlp'
+
+// application.yml
+management:
+  tracing:
+    sampling:
+      probability: 1.0  # 100% em dev, 10% em prod
+  otlp:
+    tracing:
+      endpoint: http://jaeger:4318/v1/traces
+```
+
+Cada request recebe um `traceId` propagado automaticamente entre serviços via headers HTTP. Visualiza no Jaeger/Zipkin o waterfall de cada serviço e identifica o bottleneck.
+
 ## Quando usar
 
 - **Spring Boot:** default para aplicações Java. Microserviços, APIs REST, batch processing.
@@ -319,3 +668,4 @@ One area where I've seen teams struggle is with JPA's lazy loading. The LazyInit
 - [[Testes]]
 - [[API Design]]
 - [[Kafka]]
+- [[System Design]] — troubleshooting cross-stack, building blocks
